cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 14)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/DecoratorPattern DECORATOR)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/AdapterPattern ADAPTER)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/BridgePattern BRIDGE)

add_executable(demoCpp main.cpp ${DECORATOR} ${ADAPTER} ${BRIDGE})
